# SCONE

./: .clang-format  .gitignore  .gitmodules  .hgignore  .travis.yml  .updateversion.bat  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build-adam  build_on_mac.sh  changes.txt  dependencies-debian  get-dependencies  install-adam  install.bat  please-god-just-cache-please  run-adam  sconeopt_copy.bat  sconestudio.bat  sconestudio.desktop  sconestudio_copy.bat  update_copy.bat  update_copy_cloud.bat  update_copy_cloud_2010.bat  update_copy_cloud_2013.bat  update_new_build.bat  update_version.bat
contrib/lua-5.3.5/: CMakeLists.txt
scone/: CMakeLists.txt
scone/core/: Angle.h  CMakeLists.txt  DataStorage.cpp  DataStorage.h  Delayed.h  EnumStringMap.h  Exception.h  Factory.cpp  Factory.h  HasData.cpp  HasData.h  HasName.cpp  HasName.h  HasSignature.cpp  HasSignature.h  InitFromPropNode.h  Log.cpp  Log.h  MeasuredValue.h  Named.cpp  Named.h  Profiler.cpp  Profiler.h  PropNode.cpp  PropNode.h  PropNodeFactory.cpp  PropNodeFactory.h  Propertyable.cpp  Propertyable.h  Quat.cpp  Quat.h  Range.h  ResourceCache.h  Result.h  SampledValue.h  Signature.cpp  Signature.h  Statistic.h  Storage.cpp  Storage.h  (+17 more)
scone/core/depricated/: Quat.cpp  Quat.h  Vec3.cpp  Vec3.h
scone/cs/: CMakeLists.txt  CompositeMeasure.cpp  CompositeMeasure.h  ConditionalMuscleReflex.cpp  DofLimitMeasure.cpp  DofLimitMeasure.h  DofReflex.cpp  DofReflex.h  EffortMeasure.cpp  EffortMeasure.h  EnergyMeasure.cpp  EnergyMeasure.h  Factories.cpp  Factories.h  FactoryTest.cpp  FactoryTest.h  FeedForwardController.cpp  FeedForwardController.h  FiniteStateMachine.cpp  FiniteStateMachine.h  Function.h  GaitCycleMeasure.cpp  GaitCycleMeasure.h  GaitMeasure.cpp  GaitMeasure.h  GaitStateController.cpp  GaitStateController.h  HeightMeasure.cpp  HeightMeasure.h  JointLimitMeasure.cpp  JointLimitMeasure.h  JumpMeasure.cpp  JumpMeasure.h  JumpingMeasure.cpp  JumpingMeasure.h  Measure.cpp  Measure.h  MetaReflex.cpp  MetaReflex.h  MetaReflexController.cpp  (+46 more)
scone/opt/: CMakeLists.txt  CmaOptimizer.cpp  CmaOptimizer.h  Factories.cpp  Factories.h  Objective.cpp  Objective.h  Optimization.cpp  Optimization.h  Optimizer.cpp  Optimizer.h  OptimizerCma.cpp  OptimizerCma.h  Param.h  ParamInfo.cpp  ParamInfo.h  ParamSet.cpp  ParamSet.h  SharkHelperClasses.h  opt.cpp  opt.h  stdafx.cpp  stdafx.h
scone/sconecmd/: sconecmd.cpp
scone/sconelib/: CMakeLists.txt  stdafx.h
scone/sconemanager/: CMakeLists.txt  SconeManager.h  main.cpp
scone/sconeopt/: CMakeLists.txt  SconeManager.cpp  sconeopt.cpp  stdafx.h
scone/sconestudio/: CMakeLists.txt  EditorDockWidget.cpp  EditorDockWidget.h  EditorDockWidget.ui  EditorWidget.cpp  EditorWidget.h  ModelVis.cpp  ModelVis.h  OsgCameraManipulator.cpp  OsgCameraManipulator.h  OsgModel.cpp  OsgModel.h  OsgScene.cpp  OsgScene.h  OsgTools.cpp  OsgTools.h  ProgressDock.ui  ProgressDockWidget.cpp  ProgressDockWidget.h  ProgressDockWidget.ui  QCodeEditor.cpp  QCodeEditor.h  QCodeTextEdit.cpp  QCodeTextEdit.h  QOsgViewer.cpp  QOsgViewer.h  QPlayControl.cpp  QPlayControl.h  QSconeStorageDataModel.cpp  QSconeStorageDataModel.h  ReflexAnalysisObjective.cpp  ReflexAnalysisObjective.h  ReflexAnalysisTool.cpp  ReflexAnalysisTool.h  ResultsFileSystemModel.cpp  SceneManager.cpp  SceneManager.h  SceneVis.cpp  SceneVis.h  SconeManager.cpp  (+23 more)
scone/sconeunittests/: CMakeLists.txt  common.h  global_fixture.cpp  main.cpp  optimization_test.cpp  optimization_test.h  platform.h  propnode_test.cpp  propnode_test.h  simulation_test.cpp  simulation_test.h
scone/sim/: Actuator.cpp  Actuator.h  Area.cpp  Area.h  BalanceSensor.cpp  BalanceSensor.h  Body.cpp  Body.h  CMakeLists.txt  ChannelSensor.cpp  ChannelSensor.h  ChannelSensorDelayAdapter.cpp  ChannelSensorDelayAdapter.h  Controller.cpp  Controller.h  Dof.cpp  Dof.h  Driver.cpp  Driver.h  Factories.cpp  Factories.h  Joint.cpp  Joint.h  Leg.cpp  Leg.h  Link.cpp  Link.h  Model.cpp  Model.h  Muscle.cpp  Muscle.h  Sensor.cpp  Sensor.h  SensorDelayAdapter.cpp  SensorDelayAdapter.h  Sensors.cpp  Sensors.h  Side.h  Simulation.cpp  Simulation.h  (+9 more)
scone/sim/simbody/: Body_Simbody.cpp  Body_Simbody.h  (+26 more)
scone/studio/: CMakeLists.txt  SconeManager.cpp  SconeManager.h  SconeStudio.cpp  SconeStudio.h  SconeStudio.ui  main.cpp  stdafx.h
scone/test/: CMakeLists.txt  ExampleObjective.cpp  ExampleObjective.h  OptimizationTest.cpp  OptimizationTest.h  SerializationTest.h  SimulationTest.h  Test.cpp  Test.h  XmlParseTest.h  main.cpp  stdafx.cpp  stdafx.h  test.cpp
scone/unittests/: CMakeLists.txt  global_fixture.cpp  optimization_test.cpp  platform.h  simulation_test.cpp
scone/vis/: CMakeLists.txt  stdafx.cpp  stdafx.h  vis.h
src/sconecmd/: CMakeLists.txt  sconecmd.cpp
src/sconelib/: CMakeLists.txt  stdafx.cpp  stdafx.h
src/sconemodelopensim3/: BodySimbody.cpp  BodySimbody.h  CMakeLists.txt  ConstantForce.h  DofSimbody.h  JointSimbody.cpp  JointSimbody.h  ModelSimbody.cpp  ModelSimbody.h  MuscleSimbody.cpp  MuscleSimbody.h  SimulationSimbody.h  platform.h  simbody_tools.h
src/sconestudio/: CMakeLists.txt  GaitAnalysis.cpp  GaitAnalysis.h  GaitPlot.cpp  GaitPlot.h  LicenseDialog.ui  ModelTool.ui  ModelVis.cpp  ModelVis.h  OptimizerTask.cpp  OptimizerTask.h  OptimizerTaskExternal.cpp  OptimizerTaskExternal.h  OptimizerTaskThreaded.cpp  OptimizerTaskThreaded.h  ParTableModel.cpp  ParTableModel.h  ProgressDockWidget.cpp  ProgressDockWidget.h  ProgressDockWidget.ui  ReflexAnalysisObjective.cpp  ReflexAnalysisObjective.h  ResultsFileSystemModel.cpp  ResultsFileSystemModel.h  Scenario.cpp  Scenario.h  SconeSettings.ui  SconeStorageDataModel.cpp  SconeStorageDataModel.h  SconeStudio.cpp  SconeStudio.h  SconeStudio.ui  Settings.cpp  Settings.h  SettingsEditor.cpp  SettingsEditor.h  StudioModel.cpp  StudioModel.h  StudioSettings.cpp  StudioSettings.h  (+12 more)
src/sconeunittests/: CMakeLists.txt  main.cpp  optimization_test.cpp  optimization_test.h  propnode_test.h  proxy_string_test.h  scenario_test.cpp  scenario_test.h  simulation_test.cpp  simulation_test.h  tutorial_test.cpp  tutorial_test.h
(+1318 files in other folders)
